--- a/app/scss/globals/layout.scss
+++ b/app/scss/globals/layout.scss
@@ -14,6 +14,10 @@
     grid-template-columns: 1fr;
     grid-template-rows: auto auto;
     gap: 40px;
+    @media (min-width: 900px) {
+        grid-template-columns: 2fr 1fr;
+        grid-template-rows: auto;
+    }
     &__main,
     &__sidebar {
         padding: 40px;
